--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,21 +15,13 @@
 	<p>Powered by <strong><a href="https://github.com/key-amb/hugo-theme-bootie-docs">Bootie Docs</a></strong> - theme for <a href="http://gohugo.io/">Hugo</a> by <a href="https://github.com/key-amb/">key-amb</a>.</p>
 </footer>
 
-{{ with .Site.Params.analytics }}<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	ga('create', '{{ . }}', 'auto');
-	ga('send', 'pageview');
-</script>{{ end }}
 
-<script src="{{ $baseUrl }}/js/jquery-1.11.2.min.js"></script>
-<script src="{{ $baseUrl }}/js/bootstrap.min.js"></script>
+<script src="./js/jquery-1.11.2.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="{{ $baseUrl }}/js/highlight.min.js"></script>
+<script src="./js/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
-<script src="{{ $baseUrl }}/js/ie10-viewport-bug-workaround.js"></script>
+<script src="./js/ie10-viewport-bug-workaround.js"></script>
 
 </body>
 </html>
