--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -16,12 +16,12 @@
 </footer>
 
 
-<script src="{{ $baseUrl }}/js/jquery-1.11.2.min.js"></script>
-<script src="{{ $baseUrl }}/js/bootstrap.min.js"></script>
+<script src="/js/jquery-1.11.2.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="{{ $baseUrl }}/js/highlight.min.js"></script>
+<script src="/js/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
-<script src="{{ $baseUrl }}/js/ie10-viewport-bug-workaround.js"></script>
+<script src="/js/ie10-viewport-bug-workaround.js"></script>
 
 </body>
 </html>
