--- a/layouts/partials/sidebar-list.html
+++ b/layouts/partials/sidebar-list.html
@@ -4,7 +4,7 @@
 		<h4>Categories</h4>
 		<ul class="list-unstyled">
 		{{ range $name, $taxonomy := .Site.Taxonomies.categories }}
-			<li><a class="tag-item" href="{{ $baseUrl }}/categories/{{ $name | urlize }}">{{ $name }}</a></li>
+			<li><a class="tag-item" href="/categories/{{ $name | urlize }}">{{ $name }}</a></li>
 		{{ end }}
 		</ul>
 	</div>
@@ -12,7 +12,7 @@
 		<h4>Tags</h4>
 		<div class="tag-box">
 		{{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-			<a class="tag-item" href="{{ $baseUrl }}/tags/{{ $name | urlize }}">{{ $name }}</a>
+			<a class="tag-item" href="/tags/{{ $name | urlize }}">{{ $name }}</a>
 		{{ end }}
 		</div>
 	</div>
