ajout logo labx

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="alternate" href="/index.xml" type="application/rss+xml" title="{{ .Site.Title }}">
-		<link rel="icon" href="/favicon.ico">
+		<link rel="icon" href="/logo-labx-bordeaux.ico">
 		<title>{{ .Title }}{{ if eq $isHomePage false }} - {{ .Site.Title }}{{ end }}</title>
 		<link rel="stylesheet" href="/css/highlight.js.min.css">
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
