ajout de l'actualité dans la page d'acceuille ajout nous contacter et nous trouver

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -49,7 +49,15 @@
 						</ul>
 					</li>
 				{{ end }}
+				<li class="dropdown">
+						<a href="/info/nous_trouver" >Nous trouver</a> 
+				
+				
+				<li class="dropdown">
+						<a href="/info/nous_contacter" >Nous contacter</a> 
 				</ul>
+				
+				
 			</div><!--/.nav-collapse -->
 		</div>
 	</nav>
