MAJ des actu du site; ajout d'une page lien vers les sites des copains

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -50,7 +50,7 @@
 				{{ end }}
 				{{ range where .Site.Pages "Section" "info" }}
 				
-					<li class="dropdown"><a href={{.Permalink}}  >{{.Title}}</a></li>
+					<li class="dropdown"><a href={{.RelPermalink}}  >{{.Title}} </a></li>
 				{{ end }}
 				
 				
