--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -16,7 +16,7 @@
 		</main>
 	</div> <!-- /.doc-main -->
 
-	{{ partial "sidebar-single.html" . }}
+<!--	{{ partial "sidebar-single.html" . }}-->
 
 </div> <!-- /.row -->
 
